src/test/deca/context/valid/divide_by_0_with_expr.deca
// Description :
//
//      Test contextuellement correct car division par une expression =0 mais menera à un crash
//
// Résultats :
//
//      N/A
//
// Historique :
//
//      Créé le 07/06/2023 par gl03

{
    float y= 3/(2-2);
}
