src/test/deca/context/invalid/divide_by_0_with_expr.deca
// Description : 
// 
//      Test contextuellement incorrect car division par une expression =0
// 
// Résultats : 
//
//      N/A 
// 
// Historique : 
// 
//      Créé le 07/06/2023 par gl03

{
    int y= 3/(2-2);
}